# winsentry

./: .gitignore  LICENSE  MANIFEST.in  README.md  config.json  install-service.ps1  install.bat  pyproject.toml  requirements.txt  run_unicode.bat  run_winsentry.bat  run_winsentry.py  run_with_unicode.py  setup.py  test_email_functionality.db  test_recovery_script.ps1  test_smtp_edit.db  test_ssl_fix.db  unicode_fix_example.py  winsentry_service.py
docs/: DATABASE_FEATURES.md  EMAIL_ALERTS.md  POWERSHELL_SCRIPTS.md  QUICK_START.md
examples/: advanced_recovery.ps1  recovery_script.ps1  template_recovery.ps1
tests/: test_database.py  test_imports.py  test_installation.py
winsentry/: __init__.py  __main__.py  adhoc_check_manager.py  alert_engine.py  api.py  app.py  background_monitor.py  database.py  email_alert.py  handlers.py  log_manager.py  logger.py  main.py  migrate_db.py  models.py  port_monitor.py  python_app_monitor.py  scheduled_task_manager.py  script_executor.py  service_manager.py  service_monitor.py  supervisor.py  system_resource_monitor.py
winsentry/monitors/: __init__.py  port_monitor.py  process_monitor.py  service_monitor.py  system_monitor.py
winsentry/static/: app.js  index.html  style.css  styles.css
winsentry/templates/: email_config.html  index.html
