[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winsentry"
version = "0.1.0"
description = "Windows system monitoring & alerting tool with web UI"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "WinSentry Team"}
]
keywords = ["windows", "monitoring", "alerting", "process", "service"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "psutil>=5.9.5",
    "wmi>=1.5.1",
    "pywin32>=306",
    "python-multipart>=0.0.6",
    "schedule>=1.2.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/winsentry"
Repository = "https://github.com/yourusername/winsentry"
Documentation = "https://github.com/yourusername/winsentry/blob/main/README.md"

[tool.setuptools]
packages = ["winsentry", "winsentry.monitors"]

[tool.setuptools.package-data]
winsentry = ["static/*", "static/**/*"]

